--- a/app/app.less
+++ b/app/app.less
@@ -1,3 +1,3 @@
-
 @import "bower_components/bootstrap/less/bootstrap.less";
+@import "bower_components/components-font-awesome/less/font-awesome.less";
 @import "github/github.less";
