fixing the markup removing all the unrequired document

--- a/app/github/github.less
+++ b/app/github/github.less
@@ -1,4 +1,8 @@
 /* app css stylesheet */
+body {
+  background-color: #eee;
+}
+
 .media {
   .well;
 }
@@ -13,6 +17,8 @@
   color: black;
 }
 
-.form-group {
-  margin-bottom: 5px;
+.list-group {
+  .form-group {
+    margin-bottom: 0;
+  }
 }
