--- a/app/github/github.less
+++ b/app/github/github.less
@@ -3,6 +3,13 @@ body {
   background-color: #eee;
 }
 
+.jumbotron {
+  > .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .media {
   .well;
 }
@@ -18,6 +25,10 @@ body {
 }
 
 .list-group {
+  .img-responsive {
+    min-height: 150px;
+    min-width: 150px;
+  }
   .form-group {
     margin-bottom: 0;
   }
