--- a/app/github/github.less
+++ b/app/github/github.less
@@ -25,6 +25,13 @@ body {
 }
 
 .list-group {
+  .control-label {
+    padding-top: 0;
+  }
+
+  > div {
+    border: 1px solid @list-group-border;
+  }
   .img-responsive {
     min-height: 150px;
     min-width: 150px;
